--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container">
         <img
           id="MS-logo"
-          src="/Microsoft-Landingpage/asset 1.png"
+          src="/asset 1.png"
           alt="Microsoft-logo"
         />
         <div class="list1">
@@ -82,7 +82,7 @@
             <li class="nav-contents2">
               <img
                 id="login"
-                src="/Microsoft-Landingpage/asset 19.jpg"
+                src="/asset 19.jpg"
                 alt="login"
               />
             </li>
@@ -103,7 +103,7 @@
                <a href="https://app.adjust.com/19ouznyv?fallback=https%3A%2F%2Fwww.microsoft.com%2Fcopilot-app%3Fform%3DMY02EA%26OCID%3DMY02EA&redirect_macos=https%3A%2F%2Fwww.microsoft.com%2Fcopilot-app%3Fform%3DMY02EA%26OCID%3DMY02EA" target="_blank">
                 <button id="S-btn1">Download the Copilot App </button></a>
             </div>
-            <div><img id="S-img2" src="/Microsoft-Landingpage/section-1-image.jpg" alt="Rendering of the image "></div>
+            <div><img id="S-img2" src="/section-1-image.jpg" alt="Rendering of the image "></div>
         </div>
     </section>
     <!-- Container2 -->
@@ -113,7 +113,7 @@
         <div class="grids1-div1">
           <img
             class="grids1-img"
-            src="/Microsoft-Landingpage/asset 4 (convert.io).jpg"
+            src="/asset 4 (convert.io).jpg"
             alt=""
           />
         </div>
@@ -130,7 +130,7 @@
           <img
             id="gimg"
             class="grids1-img"
-            src="/Microsoft-Landingpage/asset 5 (convert.io).jpg"
+            src="/asset 5 (convert.io).jpg"
             alt=""
           />
         </div>
@@ -147,7 +147,7 @@
         <div class="grids1-div1">
           <img
             class="grids1-img"
-            src="/Microsoft-Landingpage/asset 4 (convert.io).jpg"
+            src="/asset 4 (convert.io).jpg"
             alt=""
           />
         </div>
@@ -163,7 +163,7 @@
         <div class="grids1-div1">
           <img
             class="grids1-img"
-            src="/Microsoft-Landingpage/asset 6.jpg"
+            src="/asset 6.jpg"
             alt=""
           />
         </div>
@@ -179,7 +179,7 @@
     <section id="section3">
       <div class="container3">
         <div id="cell-1">
-          <img src="/Microsoft-Landingpage/asset 7.jpg" alt="" />
+          <img src="/asset 7.jpg" alt="" />
           <h2>Surface Laptop 5</h2>
           <h3>
             Sophisticated style and multitasking <br />speed powered by 12th Gen
@@ -205,7 +205,7 @@
           </h4></a>
         </div>
         <div id="cell-2">
-          <img src="/Microsoft-Landingpage/asset 8.jpeg" alt="" />
+          <img src="/asset 8.jpeg" alt="" />
           <h2>Surface Laptop Studio</h2>
           <h3>
             Flex your creative muscle on the most powerful Surface Laptop. Now
@@ -231,7 +231,7 @@
         </div>
         <div id="cell-3">
           <img
-            src="/Microsoft-Landingpage/asset 9 (convert.io).jpg"
+            src="/asset 9 (convert.io).jpg"
             alt=""
           />
           <h2>Xbox Series X</h2>
@@ -255,7 +255,7 @@
           </h4></a>
         </div>
         <div id="cell-4">
-          <img src="/Microsoft-Landingpage/smiling-girl.jpg" alt="" />
+          <img src="/smiling-girl.jpg" alt="" />
           <h2>Maximise the everyday with Microsoft 365</h2>
           <h3>
             Get online protection, secure cloud storage and innovative apps
@@ -310,7 +310,7 @@
           >
         </div>
         <div id="c4-2">
-          <img src="/Microsoft-Landingpage/asset 11.jpeg" alt="" />
+          <img src="/asset 11.jpeg" alt="" />
         </div>
       </div>
     </section>
@@ -322,7 +322,7 @@
       <div class="container5">
         <div id="C5-1">
           <div class="C5-img">
-            <img src="/Microsoft-Landingpage/lap.jpg" alt="" />
+            <img src="/lap.jpg" alt="" />
           </div>
           <h2 class="C5-h2">Surface for Business</h2>
           <h4 class="C5-h4">
@@ -351,7 +351,7 @@
         <div id="C5-2">
           <div class="C5-img">
             <img
-              src="/Microsoft-Landingpage/asset 13 (convert.io).jpg"
+              src="/asset 13 (convert.io).jpg"
               alt=""
             />
           </div>
@@ -381,7 +381,7 @@
         </div>
         <div id="C5-3">
           <div class="C5-img">
-            <img src="/Microsoft-Landingpage/asset 14.jpeg" alt="" />
+            <img src="/asset 14.jpeg" alt="" />
           </div>
           <h2 class="C5-h2">Windows 11 for business</h2>
           <h4 class="C5-h4">
@@ -410,7 +410,7 @@
         </div>
         <div id="C5-4">
           <div class="C5-img">
-            <img src="/Microsoft-Landingpage/asset 15.jpeg" alt="" />
+            <img src="/asset 15.jpeg" alt="" />
           </div>
           <h2 class="C5-h2">Join the era of AI</h2>
           <h4 class="C5-h4">
@@ -443,8 +443,8 @@
     <div id="pre-footer">
       <h4>Follow Microsoft </h4>
       <ul>
-        <li><a href="https://twitter.com/microsoftindia"><img src="/Microsoft-Landingpage/asset 17.jpg" alt=""></a></li>
-        <li><a href="https://www.youtube.com/user/IndiaMicrosoftVideos"><img src="/Microsoft-Landingpage/asset 18.jpg" alt=""></a></li>
+        <li><a href="https://twitter.com/microsoftindia"><img src="/asset 17.jpg" alt=""></a></li>
+        <li><a href="https://www.youtube.com/user/IndiaMicrosoftVideos"><img src="/asset 18.jpg" alt=""></a></li>
       </ul>
     </div>
     <!-- container6 -->
@@ -529,7 +529,7 @@
         <div class="C7-1"> 
           <h4>🌍 English(India)</h4>
            <h4 id="C7-h1">
-            <img src="/Microsoft-Landingpage/asset 20.jpg" alt="">
+            <img src="/asset 20.jpg" alt="">
             Your Privacy Choices        
           </h4>
         </div>
